--- a/contest3/public/index.html
+++ b/contest3/public/index.html
@@ -29,7 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <h1>Hello world!</h1>
-    <div id="root"></div>
+    <div id="root">
+      <p>srinija</p>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
