--- a/c3/public/index.html
+++ b/c3/public/index.html
@@ -29,9 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <h1>Hello world!</h1>
-    <div id="root">
-      <p>srinija</p>
-    </div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
